--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       });
     </script> -->
 
-    <!-- External JS -->
-    <script src="./app.js"></script>
+    <!-- Basics JS -->
+    <!-- <script src="./Basics.js"></script> -->
+
+    <!-- Basics Continued JS -->
+    <script src="./Basics Continued.js"></script>
   </body>
 </html>
