--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
 
     <!-- Basics Continued JS -->
     <script src="./Basics Continued.js"></script>
+
+    <!-- Exercises -->
+    <script src="./Excercices.js"></script>
   </body>
 </html>
