date y math object, luego DOM

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <script src="./Basics Continued.js"></script>
 
     <!-- Exercises -->
-    <script src="./Excercices.js"></script>
+    <!-- <script src="./Excercices.js"></script> -->
   </body>
 </html>
