--- a/index.html
+++ b/index.html
@@ -8,25 +8,39 @@
     <title>JS Tutorial</title>
   </head>
   <body>
-    <h1>Javascript Tutorial</h1>
+    <h1 id="title">Javascript Tutorial</h1>
+    <button id="btn">Hello</button>
+
+    <div class="result">
+      <h1>Hello people</h1>
+      <div class="second">
+        <h2>Hello people2</h2>
+      </div>
+    </div>
+
+    <ul id="result">
+      <li class="first">first</li>
+      <li>apple2</li>
+      <li>apple3</li>
+      <li id="last">last</li>
+    </ul>
     <!-- Inline JS -->
     <!-- <button onclick="alert ('Hello World') ">Click Me</button> -->
     <!-- Internal JS -->
     <!-- <script>
-      document.querySelectorAll(".btn").forEach((item) => {
-        item.addEventListener("click", () => {
-          alert("This is JS. Awesome");
+        document.querySelectorAll(".btn").forEach((item) => {
+          item.addEventListener("click", () => {
+            alert("This is JS. Awesome");
+          });
         });
-      });
-    </script> -->
-
+      </script> -->
     <!-- Basics JS -->
     <!-- <script src="./Basics.js"></script> -->
-
     <!-- Basics Continued JS -->
-    <script src="./Basics Continued.js"></script>
-
+    <!-- <script src="./Basics Continued.js"></script> -->
     <!-- Exercises -->
     <!-- <script src="./Excercices.js"></script> -->
+    <!-- DOM JS -->
+    <script src="./DOM Tutorial.js"></script>
   </body>
 </html>
