--- a/index.html
+++ b/index.html
@@ -8,22 +8,12 @@
     <title>JS Tutorial</title>
   </head>
   <body>
-    <h1 id="title">Javascript Tutorial</h1>
-    <button id="btn">Hello</button>
+    <h1>First Heading</h1>
 
-    <div class="result">
-      <h1>Hello people</h1>
-      <div class="second">
-        <h2>Hello people2</h2>
-      </div>
-    </div>
+    <!-- <h1 id="first" class="colors">I am First Element</h1>
+    <h1 id="second">I am Second Element</h1>
+    <h1 id="third">I am Third Element</h1> -->
 
-    <ul id="result">
-      <li class="first">first</li>
-      <li>apple2</li>
-      <li>apple3</li>
-      <li id="last">last</li>
-    </ul>
     <!-- Inline JS -->
     <!-- <button onclick="alert ('Hello World') ">Click Me</button> -->
     <!-- Internal JS -->
