--- a/index.html
+++ b/index.html
@@ -6,9 +6,30 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./style.css" />
     <title>JS Tutorial</title>
+    <style>
+      .red {
+        background: red;
+        color: white;
+        text-transform: uppercase;
+        font-size: 2rem;
+      }
+      .blue {
+        background: blue;
+        color: white;
+        text-transform: capitalize;
+        letter-spacing: 10px;
+      }
+      .btn {
+        background: cyan;
+        color: white;
+        font-size: 1.2rem;
+        border: none;
+      }
+    </style>
   </head>
   <body>
-    <h1>First Heading</h1>
+    <h2>Events in JS</h2>
+    <button class="btn">Click me ;)</button>
 
     <!-- <h1 id="first" class="colors">I am First Element</h1>
     <h1 id="second">I am Second Element</h1>
