--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     </style>
   </head>
   <body>
-    <h2>Events in JS</h2>
-    <button class="btn">Click me ;)</button>
+    <input type="text" id="name" />
+
+    <!-- <h2>Events in JS</h2>
+    <button class="btn">Click me ;)</button> -->
 
     <!-- <h1 id="first" class="colors">I am First Element</h1>
     <h1 id="second">I am Second Element</h1>
