First commit, currenttarget target

--- a/index.html
+++ b/index.html
@@ -25,10 +25,21 @@
         font-size: 1.2rem;
         border: none;
       }
+      a {
+        display: inline-block;
+        margin-top: 100vh;
+      }
     </style>
   </head>
   <body>
-    <input type="text" id="name" />
+    <button class="btn">First BTN</button>
+    <br />
+    <button class="btn">
+      Second <strong>BTN <strong>More Nested</strong></strong>
+    </button>
+    <br />
+    <button class="btn">Third BTN</button>
+    <!-- <input type="text" id="name" /> -->
 
     <!-- <h2>Events in JS</h2>
     <button class="btn">Click me ;)</button> -->
