--- a/index.html
+++ b/index.html
@@ -25,20 +25,39 @@
         font-size: 1.2rem;
         border: none;
       }
-      a {
+      /* a {
         display: inline-block;
         margin-top: 100vh;
-      }
+      } */
     </style>
   </head>
   <body>
-    <button class="btn">First BTN</button>
+    <form action="" id="form">
+      <input type="text" id="name" />
+      <input type="password" id="password" />
+      <input type="submit" value="submit" />
+    </form>
+
+    <!-- <div class="container"> -->
+    <!-- <h1 class="heading">I am inside a Container</h1> -->
+    <!-- </div> -->
+    <!-- <button class="btn">Click me</button> -->
+
+    <!-- <div class="container">
+      <ul class="list-items">
+        <li class="item"><a href="#" class="link">Link</a></li>
+        <li class="item"><a href="#" class="link">Link</a></li>
+        <li class="item"><a href="#" class="link">Link</a></li>
+      </ul>
+    </div> -->
+
+    <!-- <button class="btn">First BTN</button>
     <br />
     <button class="btn">
       Second <strong>BTN <strong>More Nested</strong></strong>
     </button>
     <br />
-    <button class="btn">Third BTN</button>
+    <button class="btn">Third BTN</button> -->
     <!-- <input type="text" id="name" /> -->
 
     <!-- <h2>Events in JS</h2>
