--- a/Objects/objects.html
+++ b/Objects/objects.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <h1>Objects Practice</h1>
+    <button class="btn-1">Click me 1</button>
+    <button class="btn-2">Click me 2</button>
     <!-- JS -->
     <script src="./Objects.js"></script>
   </body>
