--- a/Objects/objects.html
+++ b/Objects/objects.html
@@ -11,5 +11,7 @@
     <button class="btn-2">Click me 2</button>
     <!-- JS -->
     <script src="./Objects.js"></script>
+    <!-- ES6 JS -->
+    <script src="./ES6.js"></script>
   </body>
 </html>
