Objects DONE. comenzamos Projects with Bootstrap

--- a/Objects/objects.html
+++ b/Objects/objects.html
@@ -7,8 +7,10 @@
   </head>
   <body>
     <h1>Objects Practice</h1>
-    <button class="btn-1">Click me 1</button>
-    <button class="btn-2">Click me 2</button>
+    <h2>Call Apply Bind</h2>
+    <button class="increment">Increment</button>
+    <!-- <button class="btn-1">Click me 1</button>
+    <button class="btn-2">Click me 2</button> -->
     <!-- JS -->
     <script src="./Objects.js"></script>
     <!-- ES6 JS -->
