--- a/Objects/FlashCard Project/index.html
+++ b/Objects/FlashCard Project/index.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="row px-2" id="questions-list">
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="card card-body flashcard my-3">
             <h4 class="text-capitalize">question title?</h4>
             <a href="#" class="text-capitalize my-3 show-answer"
@@ -82,7 +82,7 @@
               >
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
