--- a/Objects/OOP Projects/Counter/index.html
+++ b/Objects/OOP Projects/Counter/index.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>OOP counter project</h2>
+    <!-- First Counter -->
+    <div class="container first-counter">
+      <h2>First Counter</h2>
+      <span class="value">0</span>
+      <div class="button-container">
+        <button class="btn decrease">Decrease</button>
+        <button class="btn reset">Reset</button>
+        <button class="btn increase">Increase</button>
+      </div>
+    </div>
+    <!-- Second Counter  -->
+    <div class="container second-counter">
+      <h2>Second Counter</h2>
+      <span class="value">0</span>
+      <div class="button-container">
+        <button class="btn decrease">Decrease</button>
+        <button class="btn reset">Reset</button>
+        <button class="btn increase">Increase</button>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
