--- a/Objects/OOP Projects/Counter/index.html
+++ b/Objects/OOP Projects/Counter/index.html
@@ -27,6 +27,9 @@
         <button class="btn increase">Increase</button>
       </div>
     </div>
-    <script src="app.js"></script>
+    <!-- Proto -->
+    <!-- <script src="app-proto.js"></script> -->
+    <!-- Class -->
+    <script src="./app-class.js"></script>
   </body>
 </html>
