--- a/Objects/OOP Projects/Gallery/index.html
+++ b/Objects/OOP Projects/Gallery/index.html
@@ -13,7 +13,87 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>gallery project</h2>
+    <!-- Nature Pictures -->
+    <section class="section nature">
+      <img
+        src="./images/nature-1.jpeg"
+        title="nature-1"
+        class="img"
+        data-id="1"
+        alt="nature"
+      />
+      <img
+        src="./images/nature-2.jpeg"
+        title="nature-2"
+        class="img"
+        data-id="2"
+        alt="nature"
+      />
+      <img
+        src="./images/nature-3.jpeg"
+        title="nature-3"
+        class="img"
+        data-id="3"
+        alt="nature"
+      />
+    </section>
+    <!-- City Pictures -->
+    <section class="section city">
+      <img
+        src="./images/city-1.jpeg"
+        title="city-1"
+        class="img"
+        data-id="1"
+        alt="city"
+      />
+      <img
+        src="./images/city-2.jpeg"
+        title="city-2"
+        class="img"
+        data-id="2"
+        alt="city"
+      />
+      <img
+        src="./images/city-3.jpeg"
+        title="city-3"
+        class="img"
+        data-id="3"
+        alt="city"
+      />
+      <img src="./images/city-4.jpeg" title="city-4" class="img" data-id=41"
+      alt="city" />
+      <img
+        src="./images/city-5.jpeg"
+        title="city-5"
+        class="img"
+        data-id="5"
+        alt="city"
+      />
+    </section>
+    <!-- Modal || Todo esto será Dinamico ||"open" -->
+    <div class="modal">
+      <button class="close-btn">
+        <i class="fas fa-times"></i>
+      </button>
+      <!-- Modal Content -->
+      <div class="modal-content">
+        <!-- Prev Next Btns -->
+        <button class="prev-btn"><i class="fas fa-chevron-left"></i></button>
+        <button class="next-btn"><i class="fas fa-chevron-right"></i></button>
+        <!-- End Btns -->
+        <!-- Content -->
+        <img
+          src="./images/city-1.jpeg"
+          class="main-img"
+          alt="placeholder so far"
+        />
+        <h3 class="image-name">Image Name</h3>
+        <modal class="images">
+          <!-- Aqui meteremos las Imagenes || dynamic too -->
+        </modal>
+        <!-- End Content -->
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
