--- a/Objects/OOP Projects/Gallery/index.html
+++ b/Objects/OOP Projects/Gallery/index.html
@@ -88,7 +88,7 @@
           alt="placeholder so far"
         />
         <h3 class="image-name">Image Name</h3>
-        <modal class="images">
+        <modal class="modal-images">
           <!-- Aqui meteremos las Imagenes || dynamic too -->
         </modal>
         <!-- End Content -->
