Gallery Proto DONE

--- a/Objects/OOP Projects/Gallery/index.html
+++ b/Objects/OOP Projects/Gallery/index.html
@@ -94,6 +94,6 @@
         <!-- End Content -->
       </div>
     </div>
-    <script src="app.js"></script>
+    <script src="app-proto.js"></script>
   </body>
 </html>
