--- a/ES6/index.html
+++ b/ES6/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        text-transform: capitalize;
+      }
+      .blue {
+        color: blue;
+      }
+    </style>
   </head>
   <body>
-    <div class="template" id="result"></div>
+    <h1>Info</h1>
+    <div id="result"></div>
     <!-- JS -->
     <script src="./es6.js"></script>
   </body>
