--- a/ES6/index.html
+++ b/ES6/index.html
@@ -5,17 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      body {
+      /* body {
         text-transform: capitalize;
       }
       .blue {
         color: blue;
+      } */
+      .btn {
+        background: red;
+        border: 2px solid black;
+        font-size: 2rem;
+        padding: 1rem;
       }
     </style>
   </head>
   <body>
-    <h1>Info</h1>
-    <div id="result"></div>
+    <button class="btn">Click me</button>
+    <!-- <h1>Info</h1>
+    <div id="result"></div> -->
     <!-- JS -->
     <script src="./es6.js"></script>
   </body>
