--- a/ES6/index.html
+++ b/ES6/index.html
@@ -20,7 +20,12 @@
     </style>
   </head>
   <body>
-    <button class="btn">Click me</button>
+    <h1>ES6</h1>
+    <h1>JAVASCRIPT</h1>
+    <h1>HTML</h1>
+    <h1>CSS</h1>
+    <h2 id="result"></h2>
+    <!-- <button class="btn">Click me</button> -->
     <!-- <h1>Info</h1>
     <div id="result"></div> -->
     <!-- JS -->
