--- a/ES6/index.html
+++ b/ES6/index.html
@@ -21,10 +21,11 @@
   </head>
   <body>
     <h1>ES6</h1>
-    <h1>JAVASCRIPT</h1>
-    <h1>HTML</h1>
-    <h1>CSS</h1>
+    <p>John</p>
+    <p>Susan</p>
+    <p>Peter</p>
     <h2 id="result"></h2>
+    <h1 id="second"></h1>
     <!-- <button class="btn">Click me</button> -->
     <!-- <h1>Info</h1>
     <div id="result"></div> -->
