--- a/ES6/Modules/Modules.html
+++ b/ES6/Modules/Modules.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        text-align: center;
+      }
+      h1 {
+        letter-spacing: 2px;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
+    <h1>Modules</h1>
+    <div class="container"></div>
+    <button class="btn">Show People</button>
     <!-- JS Modules -->
     <script src="./ES6Modules.js"></script>
   </body>
