ES6 Modules DONE

--- a/ES6/Modules/Modules.html
+++ b/ES6/Modules/Modules.html
@@ -19,6 +19,6 @@
     <div class="container"></div>
     <button class="btn">Show People</button>
     <!-- JS Modules -->
-    <script src="./ES6Modules.js"></script>
+    <script type="module" src="./ES6Modules.js"></script>
   </body>
 </html>
