--- a/Async/index.html
+++ b/Async/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        text-align: center;
+      }
+      h1 {
+        letter-spacing: 2px;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
+    <h1>Async Javascript</h1>
+
+    <!-- CallBack Hell in DOM -->
+    <h2 class="one">Hello World</h2>
+    <h2 class="two">Hello People</h2>
+    <h2 class="three">Hello javascript</h2>
+    <button class="btn">Click me for Magic</button>
+    <!-- End CB Hell in DOM -->
+    <!-- Reject Example -->
+    <div>
+      <img src="" alt="" />
+    </div>
+    <!-- End Reject Example -->
     <!-- JS -->
     <script src="./app.js"></script>
   </body>
