--- a/Async/index.html
+++ b/Async/index.html
@@ -12,6 +12,11 @@
         letter-spacing: 2px;
         text-align: center;
       }
+      img {
+        width: 100%;
+        height: 300px;
+        object-fit: contain;
+      }
     </style>
   </head>
   <body>
@@ -24,11 +29,12 @@
     <button class="btn">Click me for Magic</button>
     <!-- End CB Hell in DOM -->
     <!-- Reject Example -->
-    <div>
-      <img src="" alt="" />
+    <div class="img-container">
+      <!-- <img src="https://source.unsplash.com/random" alt="random img" /> -->
     </div>
     <!-- End Reject Example -->
     <!-- JS -->
+    <script src="./PromiseRejectEJ.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
