--- a/Async/index.html
+++ b/Async/index.html
@@ -29,12 +29,14 @@
     <button class="btn">Click me for Magic</button>
     <!-- End CB Hell in DOM -->
     <!-- Reject Example -->
-    <div class="img-container">
-      <!-- <img src="https://source.unsplash.com/random" alt="random img" /> -->
-    </div>
+    <!-- <div class="img-container">
+      <img src="https://source.unsplash.com/random" alt="random img" /> 
+    </div> -->
     <!-- End Reject Example -->
     <!-- JS -->
-    <script src="./PromiseRejectEJ.js"></script>
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
+    <!-- <script src="./PromiseRejectEJ.js"></script> -->
+    <!-- <script src="./PromisesDOM.js"></script> -->
+    <script src="./AsyncAwait.js"></script>
   </body>
 </html>
