--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        text-align: center;
+      }
+      h1 {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
+    <h1>AJAX</h1>
     <!-- JS -->
     <script src="./app.js"></script>
   </body>
