--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -15,7 +15,10 @@
   </head>
   <body>
     <h1>AJAX</h1>
+    <button type="button" class="btn">Show JSON</button>
     <!-- JS -->
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
+    <!-- JSON Tut -->
+    <script src="./jsonTut.js"></script>
   </body>
 </html>
