--- a/AJAX/AJAX Projects/Chuck Norris/index.html
+++ b/AJAX/AJAX Projects/Chuck Norris/index.html
@@ -7,7 +7,15 @@
   </head>
   <link rel="stylesheet" href="./styles.css" />
   <body>
-    <h1>Chuck Norris Jokes</h1>
+    <main>
+      <div class="container">
+        <img src="./chuck.png" alt="chuck" />
+        <button class="btn" type="button">Make me Laugh, Chuck!</button>
+        <p class="content"></p>
+      </div>
+    </main>
+
+    <!-- JS -->
     <script src="./app.js"></script>
   </body>
 </html>
