--- a/AJAX/AJAX Projects/Random User/index.html
+++ b/AJAX/AJAX Projects/Random User/index.html
@@ -14,7 +14,55 @@
   </head>
 
   <body>
-    <h1>random person</h1>
+    <div class="block bcg-black"></div>
+    <div class="block">
+      <div class="container">
+        <img
+          src="https://randomuser.me/api/portraits/men/75.jpg"
+          alt="Random User"
+          class="user-img"
+        />
+        <p class="user-title">My Name is:</p>
+        <p class="user-value">Tomas Padilla</p>
+        <!-- Icons -->
+        <div class="values-list">
+          <!-- Single Icon -->
+          <button class="icon active" data-label="name">
+            <span class="far fa-user"></span>
+          </button>
+          <!-- End Single Icon -->
+          <!-- Single Icon -->
+          <button class="icon" data-label="email">
+            <span class="far fa-envelope-open"></span>
+          </button>
+          <!-- End Single Icon -->
+          <!-- Single Icon -->
+          <button class="icon" data-label="age">
+            <span class="far fa-calendar-times"></span>
+          </button>
+          <!-- End Single Icon -->
+          <!-- Single Icon -->
+          <button class="icon" data-label="map">
+            <span class="far fa-map"></span>
+          </button>
+          <!-- End Single Icon -->
+          <!-- Single Icon -->
+          <button class="icon" data-label="phone">
+            <span class="fas fa-phone"></span>
+          </button>
+          <!-- End Single Icon -->
+          <!-- Single Icon -->
+          <button class="icon" data-label="password">
+            <span class="fas fa-user-lock"></span>
+          </button>
+          <!-- End Single Icon -->
+        </div>
+        <!-- End Icons -->
+        <button class="btn" type="button">Random User</button>
+      </div>
+    </div>
+
+    <!-- JS -->
     <script type="module" src="./app.js"></script>
   </body>
 </html>
