--- a/AJAX/AJAX Projects/Random User/index.html
+++ b/AJAX/AJAX Projects/Random User/index.html
@@ -42,7 +42,7 @@
           </button>
           <!-- End Single Icon -->
           <!-- Single Icon -->
-          <button class="icon" data-label="map">
+          <button class="icon" data-label="street">
             <span class="far fa-map"></span>
           </button>
           <!-- End Single Icon -->
