--- a/AJAX/AJAX Projects/Cocktails/index.html
+++ b/AJAX/AJAX Projects/Cocktails/index.html
@@ -27,13 +27,13 @@
       <h2 class="title">Error Message or cocktails</h2>
       <!-- Main -->
       <div class="section-center">
-        <!-- single Drink -->
-        <a href="./drink.html">
+        <!-- Single Drink -->
+        <!-- <a href="./drink.html">
           <article class="cocktail" data-id="1">
             <img src="./cocktail.jpg" alt="concktail" />
             <h3>Martini</h3>
           </article>
-        </a>
+        </a> -->
         <!-- End Single Drink -->
       </div>
     </section>
