--- a/AJAX/AJAX Projects/Cocktails/index.html
+++ b/AJAX/AJAX Projects/Cocktails/index.html
@@ -21,7 +21,7 @@
     </form>
     <!-- Section -->
     <section class="section cocktails">
-      <article class="loading hide-loading">
+      <article class="loading">
         <img src="./loading.gif" alt="Loading" />
       </article>
       <h2 class="title">Error Message or cocktails</h2>
