--- a/ES6 Projects/16-ES6-slider/setup/index.html
+++ b/ES6 Projects/16-ES6-slider/setup/index.html
@@ -14,7 +14,36 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>slider project</h2>
+    <section class="slider">
+      <div class="reviews">
+        <h2><span>/</span>Reviews</h2>
+      </div>
+      <div class="slide-container">
+        <article class="slide">
+          <img
+            src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
+            alt="jane doe"
+            class="img"
+          />
+          <h4>Peter Doe</h4>
+          <p class="title">Product Designer</p>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio,
+            beatae.
+          </p>
+          <div class="quote-icon">
+            <div class="fas fa-quote-right"></div>
+          </div>
+        </article>
+      </div>
+      <!-- Prev Next BTN -->
+      <button class="btn prev-btn">
+        <i class="fas fa-chevron-left"></i>
+      </button>
+      <button class="btn next-btn">
+        <i class="fas fa-chevron-right"></i>
+      </button>
+    </section>
     <script type="module" src="app.js"></script>
   </body>
 </html>
