--- a/ES6 Projects/16-ES6-slider/setup/index.html
+++ b/ES6 Projects/16-ES6-slider/setup/index.html
@@ -19,7 +19,7 @@
         <h2><span>/</span>Reviews</h2>
       </div>
       <div class="slide-container">
-        <article class="slide">
+        <!-- <article class="slide">
           <img
             src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
             alt="jane doe"
@@ -34,7 +34,7 @@
           <div class="quote-icon">
             <div class="fas fa-quote-right"></div>
           </div>
-        </article>
+        </article> -->
       </div>
       <!-- Prev Next BTN -->
       <button class="btn prev-btn">
