--- a/ES6 Projects/17-stripe-submenus/setup/index.html
+++ b/ES6 Projects/17-stripe-submenus/setup/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>stripe submenu</h2>
+    <h2>stripe submenus</h2>
     <script type="module" src="app.js"></script>
   </body>
 </html>
