--- a/ES6 Projects/17-stripe-submenus/setup/index.html
+++ b/ES6 Projects/17-stripe-submenus/setup/index.html
@@ -14,7 +14,43 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>stripe submenus</h2>
+    <!-- navbar -->
+    <nav class="nav">
+      <div class="nav-center">
+        <div class="nav-header">
+          <img src="./images/logo.svg" alt="logo" class="nav-logo" />
+          <button class="btn toggle-btn">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+
+        <ul class="nav-links">
+          <li><button class="link-btn">Products</button></li>
+          <li><button class="link-btn">Developers</button></li>
+          <li><button class="link-btn">Company</button></li>
+        </ul>
+        <button class="btn signin-btn">Sign In</button>
+      </div>
+    </nav>
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-center">
+        <article class="hero-info">
+          <h1>
+            Payments Infrastructure <br />
+            for the Internet
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima,
+            quibusdam.
+          </p>
+          <button class="btn">Start Now!</button>
+        </article>
+        <article class="hero-images">
+          <img src="./images/phone.svg" class="phone-img" alt="" />
+        </article>
+      </div>
+    </section>
     <script type="module" src="app.js"></script>
   </body>
 </html>
