--- a/ES6 Projects/17-stripe-submenus/setup/index.html
+++ b/ES6 Projects/17-stripe-submenus/setup/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- navbar -->
+    <!-- Navbar -->
     <nav class="nav">
       <div class="nav-center">
         <div class="nav-header">
@@ -25,13 +25,14 @@
         </div>
 
         <ul class="nav-links">
-          <li><button class="link-btn">Products</button></li>
-          <li><button class="link-btn">Developers</button></li>
-          <li><button class="link-btn">Company</button></li>
+          <li><button class="link-btn">products</button></li>
+          <li><button class="link-btn">developers</button></li>
+          <li><button class="link-btn">company</button></li>
         </ul>
         <button class="btn signin-btn">Sign In</button>
       </div>
     </nav>
+    <!-- End NavBar -->
     <!-- Hero Section -->
     <section class="hero">
       <div class="hero-center">
@@ -51,6 +52,22 @@
         </article>
       </div>
     </section>
+    <!-- End Hero Section -->
+    <!-- SideBar -->
+    <div class="sidebar-wrapper">
+      <aside class="sidebar">
+        <button class="close-btn">
+          <i class="fas fa-times"></i>
+        </button>
+        <div class="sidebar-links">
+          <!-- SideBar Content Hard Coded -->
+        </div>
+      </aside>
+    </div>
+    <!-- End Sidebar -->
+    <!-- Links for submenu -->
+    <aside class="submenu"></aside>
+    <!-- End Links -->
     <script type="module" src="app.js"></script>
   </body>
 </html>
